--- a/exercise/exercise_2.html
+++ b/exercise/exercise_2.html
@@ -169,7 +169,7 @@
     <script type="text/javascript">
     // load our data file asynchronously and pass the data
     // to the draw function once it is loaded.
-    d3.csv("data/shanghai-6hw.csv", draw);
+    d3.csv("data/csv/shanghai-6hw.csv", draw);
     </script>
   </body>
 </html>
