added rent exercise

--- a/exercise/exercise_2.html
+++ b/exercise/exercise_2.html
@@ -37,25 +37,20 @@
         stroke: black;
       }
 
-      circle {
+      .bar {
         opacity: 0.9;
         stroke: none;
-        fill: red;
-      }
-
-      .line {
-        fill: none;
-        stroke: #4eb0bb;
-        stroke-width: 1px;
+        fill: steelblue;
       }
     </style>
 
     <script type="text/javascript">
-      format = d3.time.format("%Y-%m-%dT%H:%M:%S.%LZ");
+      // https://github.com/mbostock/d3/wiki/Time-Formatting
+      format = d3.time.format("%Y-%m");
 
       function draw(data) {
           "use strict";
-
+          debugger;
           // set margins according to Mike Bostock's margin conventions
           // http://bl.ocks.org/mbostock/3019563
           var margin = {top: 25, right: 40, bottom: 150, left: 75};
@@ -64,15 +59,16 @@
           var width = 1400 - margin.left - margin.right,
               height = 800 - margin.top - margin.bottom;
 
+          var barPadding = 10;
+
           // specify the radius of our circles and the
           // column we want to plot
-          var radius = 3,
-              field = 'airquality_raw';
+          var field = 'Van Ness - Civic Center';
         
           // Append the title for the graph
           d3.select("body")
               .append("h2")
-              .text("Shanghai Air Quality")
+              .text("Civic Center Median Rent")
               .attr('class', 'title');
 
           // append the SVG tag with height and width to accommodate for margins
@@ -84,21 +80,26 @@
                           .attr('class','chart')
                           .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-          // bind our data to svg circles for the scatter plot
-          svg.selectAll("circle")
+          // remove missing values
+          data = data.filter(function(d) {
+            return d[field];
+          });
+
+          // bind our data to svg rects for the bar plot
+          svg.selectAll(".bar")
               .data(data)
               .enter()
-              .append("circle")
+              .append("rect")
+                .attr('class', 'bar')
 
-            // maximum measurement for air quality
+            // maximum price for rent
             var max_y = d3.max(data, function(d) {
-                return d[field];
+                return +d[field];
             });
 
-            // get min/max times of first day of data
-            // (we will need a new extent for each day)
+            // get min/max dates
             var time_extent = d3.extent(data, function(d){
-                return format.parse(d['timestamp']);
+                return format.parse(d['month']);
             });
 
             // Create x-axis scale mapping dates -> pixels
@@ -106,7 +107,7 @@
                 .range([0, width])
                 .domain(time_extent);
 
-            // Create y-axis scale mapping temperature -> pixels
+            // Create y-axis scale mapping price -> pixels
             var measure_scale = d3.scale.linear()
                 .range([height, 0])
                 .domain([0, max_y]);
@@ -114,10 +115,9 @@
             // Create D3 axis object from time_scale for the x-axis
             var time_axis = d3.svg.axis()
                 .scale(time_scale)
-                .ticks(d3.time.hours, 12)
-                .tickFormat(d3.time.format("%m/%d (%H:00)"));
+                .tickFormat(d3.time.format("%b %y"));
 
-            // Create D3 axis object from temp_scale for the y-axis
+            // Create D3 axis object from measure_scale for the y-axis
             var measure_axis = d3.svg.axis()
                 .scale(measure_scale)
                 .orient("left");
@@ -137,31 +137,24 @@
             d3.select(".y.axis")
                 .append("text")
                 .attr('class', 'label')
-                .text("Pollution (mV)")
+                .text("Price (dollar/sq-ft)")
                 .attr("transform", "rotate(-90, -43, 0) translate(-400)");
 
-            // based on the data bound to each svg circle,
-            // change its center-x (cx) and center-y (cy)
-            // coordinates
-            d3.selectAll('circle')
-                .attr('cx', function(d) {
-                    return time_scale(format.parse(d['timestamp']));
+            // based on the data bound to each svg rect,
+            // change its x, y, width, height accordingly
+            d3.selectAll('.bar')
+                .attr('x', function(d) {
+                    return time_scale(format.parse(d['month']));
                 })
-                .attr('cy', function(d) {
+                .attr('width', function(d) {
+                    return width / data.length - barPadding;
+                })
+                .attr('y', function(d) {
                     return measure_scale(+d[field]);
                 })
-                .attr('r', radius);
-
-            // define the values to map for x and y position of the line
-            var line = d3.svg.line()
-                         .x(function(d) { return time_scale(format.parse(d['timestamp'])); })
-                         .y(function(d) { return measure_scale(d[field]); });
-
-            // append a SVG path that corresponds to the line chart
-            svg.append("path")
-              .datum(data)
-              .attr("class", "line")
-              .attr("d", line);
+                .attr('height', function(d) {
+                    return height - measure_scale(+d[field]);
+                });
         };
       </script>
   </head>
@@ -169,7 +162,7 @@
     <script type="text/javascript">
     // load our data file asynchronously and pass the data
     // to the draw function once it is loaded.
-    d3.csv("data/csv/shanghai-6hw.csv", draw);
+    d3.csv("../data/zillow_median_rent_pct_sf.csv", draw);
     </script>
   </body>
 </html>
