--- a/exercise/exercise_2.html
+++ b/exercise/exercise_2.html
@@ -141,7 +141,7 @@
             d3.select(".y.axis")
                 .append("text")
                 .attr('class', 'label')
-                .text("Pollution (mV)")
+                .text("Price (dollar/sq-ft)")
                 .attr("transform", "rotate(-90, -43, 0) translate(-400)");
 
             // based on the data bound to each svg circle,
